fix: modal and drawer overflow (#78)

--- a/src/components/drawer/index.scss
+++ b/src/components/drawer/index.scss
@@ -18,8 +18,8 @@
 
 .jdd.drawer {
     position: fixed;
-    max-width: 90vw;
-    min-width: 30vw;
+    max-width: 90dvw;
+    min-width: 30dvw;
     animation-timing-function: var(--jdd-transition-function);
     animation-duration: var(--jdd-transition-duration);
     animation-fill-mode: forwards;
@@ -109,6 +109,12 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+
+                > div:first-child {
+                    flex-grow: 1;
+                    overflow-y: auto;
+                    height: 0;
+                }
             }
         }
     }
@@ -117,7 +123,7 @@
         left: 0;
 
         &, > .card {
-            width: 100vw;
+            width: 100dvw;
         }
     }
 
@@ -142,8 +148,8 @@
         > .card {
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
-            padding-bottom: 100vh;
-            margin-bottom: -100vh;
+            padding-bottom: 100dvh;
+            margin-bottom: -100dvh;
         }
 
         &[data-expanded] {
@@ -159,8 +165,9 @@
     &.right, &.left {
         top: 0;
 
-        &, > .card {
-            height: 100vh;
+        &, > .card > .content {
+            height: 100dvh;
+            box-sizing: border-box;
         }
     }
 
